manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    app: present
  name: present
  selfLink: /apis/apps/v1/namespaces/default/deployments/present
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: present
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: present
    spec:
      containers:
      - image: quay.io/ssmiller25/present:23110eb
        imagePullPolicy: Always
        name: present
        args:
          - '/slides'
          - '--listing-template'
          - 'template/index.html'
        ports:
        - containerPort: 1948
        resources: 
          limits:
            cpu: "500m"
            memory: "128Mi"
          requests:
            cpu: "50m"
            memory: "64Mi"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
