manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: present
  name: present
spec:
  ports:
  - port: 1948
    protocol: TCP
    targetPort: 1948
  selector:
    app: present
  sessionAffinity: None
  type: ClusterIP
